--- a/index.html
+++ b/index.html
@@ -19,20 +19,31 @@
 
         <header class="container">
             <div class="row">
-                <div class="col-6">
-                    <h1 class="text-uppercase col-white">Titolo di prova</h1>
+                <div class="col-5 col-md-4 col col-lg-3">
+                    <div class="my-blue-box"></div>
                 </div>
-                <div class="col-6"></div>
+                
+                <div class="offset-5 col-2 d-s-none d-md-none d-lg-none">
+                    <div class="my-blue-box"></div>
+                </div>
+
+                <div class="offset-md-5 col-md-1 offset-lg-4 col-lg-2">
+                    <div class="my-blue-box"></div>
+                </div>
+
+                <div class="col-md-1 col-lg-1 d-none">
+                    <div class="my-blue-box"></div>
+                </div>
+
+                <div class="col-md-1 col-lg-1 d-none">
+                    <div class="my-blue-box"></div>
+                </div>
 
             </div>
 
         </header>
 
     </div>
-
-    
-
-
 
 </body>
 </html>
