--- a/index.html
+++ b/index.html
@@ -38,11 +38,164 @@
                 <div class="col-md-1 col-lg-1 d-none">
                     <div class="my-blue-box"></div>
                 </div>
-
             </div>
 
         </header>
 
+    </div>
+
+    <div class="my-jumbotron">
+        <div class="container-fluid mb-5">
+            <div class="row">
+                <!-- Immagine -->
+                <div class="col-12">
+                    <div class="my-blue-box"></div>
+                </div>
+            </div>
+            <!-- Testo -->
+            <div class="row">
+                <div class="col-12">
+                    <div class="my-red-box"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="my-purple-box"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="my-blue-box"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mb-5">
+        <div class="row">
+            <div class="col-12">
+                <div class="my-green-box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="my-deeppink-box"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="my-green-box"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="my-blue-box"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="my-red-box"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="my-deeppink-box"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="my-purple-box"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="my-coral-box"></div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="my-green">
+        <div class="container-fluid mb-5">
+            <div class="row">
+                <div class="col-12">
+                    <div class="my-blue-box"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="my-purple-box"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-6">
+                    <div class="my-green-box"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-6">
+                    <div class="my-red-box"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="offset-5 col-2">
+                    <div class="my-green-box"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mb-5">
+        <div class="row">
+            <div class="col-12">
+                <div class="my-blue-box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="my-green-box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="my-coral-box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="my-purple-box"></div>
+            </div>
+        </div>        
+        <div class="row">
+            <div class="col-12">
+                <div class="my-blue-box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="my-gold-box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="my-red-box"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="my-grey">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-md-4 col-lg-4">
+                    <div class="my-green-box"></div>
+                </div>
+                <div class="col-12 col-md-4 col-lg-4">
+                    <div class="my-purple-box"></div>
+                </div>
+                <div class="col-12 col-md-4 col-lg-4">
+                    <div class="my-gold-box"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="my-dark-grey">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="my-green-box"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
