modifiche header destro

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header class="container">
             <div class="row">
-                <div class="col-5 col-md-4 col col-lg-3">
+                <div class="col-5 col-md-4 col-lg-4">
                     <div class="my-blue-box"></div>
                 </div>
                 
@@ -27,17 +27,23 @@
                     <div class="my-blue-box"></div>
                 </div>
 
-                <div class="offset-md-5 col-md-1 offset-lg-4 col-lg-2">
-                    <div class="my-blue-box"></div>
+                <div class="offset-md-4 col-md-4 offset-lg-4 col-lg-4 d-none d-sm-block d-sm-none d-md-block">
+                    <div class="my-blue-box row">
+                        <div class="col">
+                            <div class="my-green-box">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="my-green-box">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="my-green-box">
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="col-md-1 col-lg-1 d-none">
-                    <div class="my-blue-box"></div>
-                </div>
-
-                <div class="col-md-1 col-lg-1 d-none">
-                    <div class="my-blue-box"></div>
-                </div>
             </div>
 
         </header>
@@ -176,7 +182,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-4 col-lg-4">
-                    <div class="my-green-box"></div>
+                    <div class="my-red-box"></div>
                 </div>
                 <div class="col-12 col-md-4 col-lg-4">
                     <div class="my-purple-box"></div>
