--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
 
+    <!-- Fontawesome cdn-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <!-- Link Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -15,34 +18,33 @@
 </head>
 <body>
 
-    <div class="my-black">
-
-        <header class="container">
+        <header>
+            <div class="container">
             <div class="row">
-                <div class="col-5 col-md-4 col-lg-4">
-                    <div class="my-blue-box"></div>
-                </div>
-                
-                <div class="offset-5 col-2 d-s-none d-md-none d-lg-none">
-                    <div class="my-blue-box"></div>
-                </div>
+                    <div class="col-5 col-md-4 col-lg-4">
+                        <div class="my-blue-box"></div>
+                    </div>
+                    
+                    <div class="offset-5 col-2 d-s-none d-md-none d-lg-none">
+                        <div class="my-blue-box"></div>
+                    </div>
 
-                <div class="offset-md-4 col-md-4 offset-lg-4 col-lg-4 d-none d-sm-block d-sm-none d-md-block">
-                    <div class="my-blue-box row">
-                        <div class="col">
-                            <div class="my-green-box">
+                    <div class="offset-md-4 col-md-4 offset-lg-4 col-lg-4 d-none d-sm-block d-sm-none d-md-block">
+                        <div class="my-blue-box row">
+                            <div class="col">
+                                <div class="my-green-box">
+                                </div>
                             </div>
-                        </div>
-                        <div class="col">
-                            <div class="my-green-box">
+                            <div class="col">
+                                <div class="my-green-box">
+                                </div>
                             </div>
-                        </div>
-                        <div class="col">
-                            <div class="my-green-box">
+                            <div class="col">
+                                <div class="my-green-box">
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
             </div>
 
@@ -50,159 +52,182 @@
 
     </div>
 
-    <div class="my-jumbotron">
-        <div class="container-fluid mb-5">
+    <main>
+
+        <!-- Jumbotron -->
+        <section class="mb-5" id="my-jumbotron">
+            <div class="container mb-5 mx-auto">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="mx-auto text-white text-uppercase text-center" id="my-jumbo-box">
+                            <div class="avatar-image">
+                                <img src="img/avatar.svg" alt="avatar image">
+                            </div>
+                            <h1>
+                                Start Bootstrap
+                            </h1>
+                            <div class="d-flex justify-content-evenly text-white">
+                                <span class="star-decoration"></span>
+                                <i class="fas fa-star"></i>
+                                <span class="star-decoration"></span>
+                            </div>
+                            <p>
+                                Graphic Artist - Web Designer - Illustrator
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section Portfolio -->
+        <section class="container mb-5" id="portfolio">
             <div class="row">
-                <!-- Immagine -->
+                <div class="col-12 mb-3 text-uppercase text-center">
+                    <h1>Portfolio</h1>
+                </div>
+                <div class="col-12 mb-3">
+                    <div class="d-flex justify-content-evenly">
+                        <span class="star-decoration"></span>
+                        <i class="fas fa-star"></i>
+                        <span class="star-decoration"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row gy-4">
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <div class="card">
+                        <img src="img/cabin.png" alt="Home image">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/cake.png" alt="cake image">
+                    </div>                
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/circus.png" alt="circus image">
+                    </div>                
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/game.png" alt="game image">
+                    </div>                
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/safe.png" alt="safe image">
+                    </div>                
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="img/submarine.png" alt="submarine image">
+                    </div>                
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Section About -->
+        <section id="about">
+            <div class="container-fluid mb-5" id="about">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="my-blue-box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="my-purple-box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <div class="my-green-box"></div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <div class="my-red-box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="offset-5 col-2">
+                        <div class="my-green-box"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section Contact-me -->
+        <section class="container mb-5" id="contact-me">
+            <div class="row">
                 <div class="col-12">
                     <div class="my-blue-box"></div>
                 </div>
             </div>
-            <!-- Testo -->
             <div class="row">
                 <div class="col-12">
-                    <div class="my-red-box"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="my-purple-box"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="my-blue-box"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container mb-5">
-        <div class="row">
-            <div class="col-12">
-                <div class="my-green-box"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="my-deeppink-box"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="my-green-box"></div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="my-blue-box"></div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="my-red-box"></div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="my-deeppink-box"></div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="my-purple-box"></div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="my-coral-box"></div>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="my-green">
-        <div class="container-fluid mb-5">
-            <div class="row">
-                <div class="col-12">
-                    <div class="my-blue-box"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="my-purple-box"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-6">
                     <div class="my-green-box"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6">
-                    <div class="my-red-box"></div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="my-coral-box"></div>
                 </div>
             </div>
             <div class="row">
-                <div class="offset-5 col-2">
-                    <div class="my-green-box"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container mb-5">
-        <div class="row">
-            <div class="col-12">
-                <div class="my-blue-box"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="my-green-box"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="my-coral-box"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="my-purple-box"></div>
-            </div>
-        </div>        
-        <div class="row">
-            <div class="col-12">
-                <div class="my-blue-box"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="my-gold-box"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="my-red-box"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="my-grey">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 col-md-4 col-lg-4">
-                    <div class="my-red-box"></div>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4">
+                <div class="col-12">
                     <div class="my-purple-box"></div>
                 </div>
-                <div class="col-12 col-md-4 col-lg-4">
+            </div>        
+            <div class="row">
+                <div class="col-12">
+                    <div class="my-blue-box"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
                     <div class="my-gold-box"></div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="my-dark-grey">
-        <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <div class="my-green-box"></div>
+                    <div class="my-red-box"></div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <div id="my-footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div class="my-red-box"></div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="my-purple-box"></div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="my-gold-box"></div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+
+        <div id="my-footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="my-green-box"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
