--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
         <!-- Section Portfolio -->
         <section class="container mb-5" id="portfolio">
             <div class="row">
-                <div class="col-12 mb-3 text-uppercase text-center">
+                <div class="col-12 pb-3 text-uppercase text-center">
                     <h1>Portfolio</h1>
                 </div>
-                <div class="col-12 mb-3">
-                    <div class="d-flex justify-content-evenly">
-                        <span class="star-decoration"></span>
+                <div class="col-12 pb-3">
+                    <div class="d-flex justify-content-center">
+                        <div class="my-star-decoration"></div>
                         <i class="fas fa-star"></i>
-                        <span class="star-decoration"></span>
+                        <div class="my-star-decoration"></div>
                     </div>
                 </div>
             </div>
@@ -132,28 +132,29 @@
 
         <!-- Section About -->
         <section id="about">
-            <div class="container-fluid mb-5" id="about">
+            <div class="container mb-5 p-4 text-white">
                 <div class="row">
-                    <div class="col-12">
-                        <div class="my-blue-box"></div>
+                    <div class="col-12 text-center py-1">
+                        <h1 class="text-uppercase">About</h1>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="my-purple-box"></div>
+
+                    <div class="col-12 mb-2 py-1">
+                        <div class="d-flex justify-content-evenly text-white">
+                            <span class="star-decoration"></span>
+                            <i class="fas fa-star"></i>
+                            <span class="star-decoration"></span>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-6">
-                        <div class="my-green-box"></div>
+
+                    <div class="col-12 col-md-6 px-3 mb-4">
+                        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSSS, and Javascript as well as optional LESS stylesheets for easy customization.</p>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6">
-                        <div class="my-red-box"></div>
+                    <div class="col-12 col-md-6 px-3">
+                        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="offset-5 col-2">
-                        <div class="my-green-box"></div>
+
+                    <div class="col-12 text-center pb-4">
+                        <button class="btn btn-outline-light"><i class="fas fa-download px-1"></i>Download</button>
                     </div>
                 </div>
             </div>
@@ -162,39 +163,38 @@
         <!-- Section Contact-me -->
         <section class="container mb-5" id="contact-me">
             <div class="row">
-                <div class="col-12">
-                    <div class="my-blue-box"></div>
+                <div class="col-12 text-center py-1">
+                    <h1 class="text-uppercase">Contact me</h1>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="my-green-box"></div>
+
+                <div class="col-12 mb-2 py-1">
+                    <div class="d-flex justify-content-evenly">
+                        <span class="star-decoration"></span>
+                        <i class="fas fa-star"></i>
+                        <span class="star-decoration"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
+
                 <div class="col-12">
-                    <div class="my-coral-box"></div>
+                    <form>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Email Address">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Phone Number">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" class="form-control" placeholder="Message" rows="3"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-success">Send</button>
+                    </div>
+                    </form>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="my-purple-box"></div>
-                </div>
-            </div>        
-            <div class="row">
-                <div class="col-12">
-                    <div class="my-blue-box"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="my-gold-box"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="my-red-box"></div>
-                </div>
+
             </div>
         </section>
 
