--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                     </div>
                 </div>
 
+                <!-- Form -->
                 <div class="col-12">
                     <form>
                     <div class="form-group">
@@ -203,16 +204,23 @@
     <!-- Footer -->
     <footer>
         <div id="my-footer-top">
-            <div class="container">
+            <div class="container text-white">
                 <div class="row">
-                    <div class="col-12 col-md-4">
-                        <div class="my-red-box"></div>
+                    <div class="col-12 col-md-4 py-3 text-center">
+                        <h5 class="text-uppercase">Location</h5>
+                        <p>2215 John Daniel Drive Clark, MO</p>
+                        <p>54243</p>
                     </div>
-                    <div class="col-12 col-md-4">
-                        <div class="my-purple-box"></div>
+                    <div class="col-12 col-md-4 py-3 text-center">
+                        <h5 class="text-uppercase">Around the web</h5>
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-google-plus-g"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-linkedin-in"></i>
                     </div>
-                    <div class="col-12 col-md-4">
-                        <div class="my-gold-box"></div>
+                    <div class="col-12 col-md-4 py-3 text-center">
+                        <h5 class="text-uppercase">About Freelancer</h5>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <span class="start-bootstrap">Start Bootstrap</span></p>
                     </div>
                 </div>
             </div>
@@ -221,8 +229,8 @@
         <div id="my-footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        <div class="my-green-box"></div>
+                    <div class="col-12 text-center text-white">
+                        <p>Copyright &copy; Your Website 2019</p>
                     </div>
                 </div>
             </div>
