--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <nav class="navbar navbar-dark navbar-expand-md bg-dark fixed-top">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand text-uppercase text-white" href="#">Startup Bootstrap</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
