--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                     <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                        <a class="nav-link active text-uppercase text-white" href="#">Portfolio</a>
+                        <a class="nav-link active text-uppercase text-white" href="#">Portfolio
+                            
+                        </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active text-uppercase text-white" href="#">About</a>
