--- a/index.html
+++ b/index.html
@@ -19,34 +19,28 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-dark navbar-expand-md bg-dark fixed-top">
+
+        <nav class="navbar navbar-expand-lg navbar-dark text-uppercase text-white">
             <div class="container">
-                <a class="navbar-brand text-uppercase text-white" href="#">Startup Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <a class="navbar-brand" href="#">Startup Bootstrap</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                    <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link active text-uppercase text-white" href="#">Portfolio
-                            
-                        </a>
+                            <a class="nav-link text-white"  href="#">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-uppercase text-white" href="#">About</a>
+                            <a class="nav-link text-white" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-uppercase text-white" href="#">Contact</a>
+                            <a class="nav-link text-white" href="#">Contact</a>
                         </li>
 
-                    </div>
-                    
-                </div>
+                    </ul>
+
+            </div>
             </div>
         </nav>
 
